public/stylesheets/main.css
html, body{
    width:100%;
    height:100%;
    margin:0;
    padding:0;
}

body{
    -webkit-background-size:cover;
    -mozilla-background-size:cover;
    background-size:cover;
    background:url('/images/boulder_painting.jpg') no-repeat;
}

div.bg{
    padding:0;
    width:300px;
    height:200px;
    margin-left:10%;
    margin-top:50px;
    opacity:0.45;
}

p{
    color:#12180a;
    margin:10px;
    padding-top:50px;
    text-align:center;
    font-family: 'Montez', cursive;
    font-size:23px;
}

a{
    text-decoration: none;
    color:#12180a;
    font-family: 'Montez', cursive;
    font-size:23px;
}

div.footer{
    position:absolute;
    bottom:0;
    right:0;
}
a.footer{
    color:#fca23f;
    opacity:0.55;
    font-size:20px;
    background:black;
    border-radius:5px;
}

